--- a/style.css
+++ b/style.css
@@ -1,38 +1,53 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
 
 body {
+    background-color: rgb(83, 83, 83);
+    height: 100vh;
     display: flex;
-    min-height: 100vh;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    background-color: #333;
-    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    background-color: rgb(221, 221, 221);
+    display: flex;  
+    flex-direction: column;  
+    align-items: center;
+    justify-content: center;
+    height: 400px;
+    width: 400px;
+    border: 2px solid black;
 }
 
 h1 {
-    color: #FFF;
-    margin: 20px 0;
+    font-size: 3.5rem;
+    padding: 40px 0px 20px;
 }
 
-.area {
-    width: 300px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin-top: 30px;
+.modo {
+    margin: 20px 0px 0px;
 }
-.area .item {
-    width: 100px;
-    height: 100px;
+
+aside {
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    font-size: 60px;
-    font-weight: bold;
-    color: #FFF;
+    justify-content: center;
+}
+
+p {
     cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: bold;
+}   
+
+p:hover {
+    color: rgb(80, 78, 78);
+    font-size: 2rem;
 }
