--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: rgb(83, 83, 83);
+    background-image: linear-gradient(to bottom right, gray, white);
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -13,17 +13,20 @@ body {
 }
 
 .container {
-    background-color: rgb(221, 221, 221);
+    background-color: rgb(0, 0, 0);
     display: flex;  
     flex-direction: column;  
     align-items: center;
     justify-content: center;
     height: 400px;
     width: 400px;
-    border: 2px solid black;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 10%;
+    box-shadow: 5px 4px 2px rgb(95, 91, 91);
 }
 
 h1 {
+    color: rgb(255, 255, 255);
     font-size: 3.5rem;
     padding: 40px 0px 20px;
 }
@@ -42,12 +45,13 @@ aside {
 }
 
 p {
+    color: rgb(196, 186, 186);
     cursor: pointer;
     font-size: 1.5rem;
     font-weight: bold;
 }   
 
 p:hover {
-    color: rgb(80, 78, 78);
+    color: rgb(255, 255, 255);
     font-size: 2rem;
 }
