--- a/templates/playervscpu.html
+++ b/templates/playervscpu.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Player vs Player</title>
+    <title>Player vs CPU</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <section class="container">
-        <h1>PvP</h1>
-        <div id="teste">
+        <h1>Player vs CPU</h1>
+        <div id="">
         </div>
         <a href="../index.html" class="voltar">Voltar</a>
     </section>   
