--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     flex-direction: column;  
     align-items: center;
     justify-content: center;
-    height: 400px;
+    height: auto;
     width: 400px;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 10%;
@@ -85,4 +85,14 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.placar>div{
+    color: white
+}
+
+.placar{
+    display: flex;
+    justify-content: space-around;
+    padding: 1rem;
 }
