--- a/templates/playervscpu.html
+++ b/templates/playervscpu.html
@@ -3,17 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Player vs CPU</title>
-    <link rel="stylesheet" href="../style.css">
+    <title>Jogo da Velha</title>
+    <link rel="stylesheet" href="../pvcpu.css">
 </head>
 <body>
     <section class="container">
         <h1>Player vs CPU</h1>
-        <div id="">
-        </div>
-        <a href="../index.html" class="voltar">Voltar</a>
-    </section>   
-    
-    <script src="../main.js"></script>
+        <aside id="board" class="board">
+            <div class="cell" data-cell-index="0"></div>
+            <div class="cell" data-cell-index="1"></div>
+            <div class="cell" data-cell-index="2"></div>
+            <div class="cell" data-cell-index="3"></div>
+            <div class="cell" data-cell-index="4"></div>
+            <div class="cell" data-cell-index="5"></div>
+            <div class="cell" data-cell-index="6"></div>
+            <div class="cell" data-cell-index="7"></div>
+            <div class="cell" data-cell-index="8"></div>
+        </aside>
+        <button id="restart-button">Recomeçar</button>
+    </section>
+    <script src="../pvcpu.js"></script>
 </body>
 </html>
