--- a/pvcpu.css
+++ b/pvcpu.css
@@ -5,34 +5,46 @@
 }
 
 body {
+    background-image: linear-gradient(to bottom right, gray, white);
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 100vh;
 }
 
 .container {
+    background-color: black;
+    height: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 10%;
+    box-shadow: 5px 4px 2px rgb(95, 91, 91);
 
 }
 
+h1 {
+    color: rgb(255, 255, 255);
+    font-size: 3.5rem;
+    padding: 0px 20px;
+}
+
 .board {
-    width: 400px;
+    width: 300px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    grid-template-columns: repeat(3, 100px);
-    grid-gap: 5px;
     margin-top: 20px;
 }
 
 .cell {
-    width: 100px;
-    height: 100px;
-    border: 2px solid black;
+    height: 5rem;
+    width: 5rem;
+    background-color: lightblue;
+    border: 1px solid black;
     font-size: 3em;
     display: flex;
     justify-content: center;
@@ -45,8 +57,23 @@ body {
 }
 
 #restart-button {
-    margin-top: 20px;
+
     font-size: 1em;
     padding: 10px 20px;
     cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.voltar {
+    color: white;
+    padding: 5px 0px;
+    font-size: 2rem;
+}
+
+.voltar:hover {
+    color: skyblue;
 }
