--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 h1 {
     color: rgb(255, 255, 255);
     font-size: 3.5rem;
-    padding: 40px 0px 20px;
+    padding: 10px 0px 20px;
 }
 
 .modo {
@@ -79,6 +79,11 @@ a {
     border: solid 1px;
     height: 5rem;
     width: 5rem;
+    cursor: pointer;
+}
+
+.dado:hover {
+    background-color: #f0f0f0;
 }
 
 .containerJogo{
