--- a/templates/playervscpu.html
+++ b/templates/playervscpu.html
@@ -20,6 +20,7 @@
             <div class="cell" data-cell-index="7"></div>
             <div class="cell" data-cell-index="8"></div>
         </aside>
+        <a href="../index.html" class="voltar">Voltar</a>
         <button id="restart-button">Recomeçar</button>
     </section>
     <script src="../pvcpu.js"></script>
