--- a/templates/cpuvscpu.html
+++ b/templates/cpuvscpu.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>CPU vs CPU</h1>
-        <div id="board" class="board">
+        <div class="board">
             <div class="cell" data-cell-index="0"></div>
             <div class="cell" data-cell-index="1"></div>
             <div class="cell" data-cell-index="2"></div>
